2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_PedigreeView.py: correctly load bookmarks, issue 1271
	* src/DataViews/_RelationView.py: correctly load bookmarks, issue 1271
	* src/PageView.py: correct bug not going to bookmark if no active person
	* src/DataViews/_MediaView.py:
	* src/DataViews/_NoteView.py:
	* src/DataViews/_RepositoryView.py:
	* src/DataViews/_SourceView.py:
	* src/DataViews/_EventView.py:
	* src/DataViews/_FamilyList.py:
	* src/DataViews/_PedigreeView.py:
	* src/DataViews/_PlaceView.py:
	* src/DataViews/_PersonView.py:
	* src/DataViews/_RelationView.py:
	after import, redraw bookmark menu

2007-10-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DateEdit.py: resolve issue #1270, date edit not closing

2007-10-02 Tobias Gehrig <tobias@gehrignet.de>
	* src/GrampsWidgets.py: refresh thumbnail section on change
	* src/glade/gramps.glade: better placement of lock icon on editmediaref

2007-10-02  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001238: Web report: sort references for 
	places and media (use locale and case sensitive sort)

2007-10-01  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/_RelationView.py:
	* src/Editors/_EditFamily.py:
	* src/GrampsWidgets.py:
	Allow enter to open iconbuttons that are not delete, issue #1159

2007-10-01 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py: read region tag in xml
	* src/GrampsDb/_GrampsDbWriteXML.py: output region tag in xml (=subsection of picture)
	* src/GrampsDb/_GrampsDbConst.py: change env_dir in ENV_DIR
	* src/Editors/_EditMediaRef.py: remove bug with coord None

2007-10-01 James G. Sack <jgsack@san.rr.com>
	* src/gramps.py: remove wrong setting of sys.path

2007-10-01  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/DescendChart.py:
	* src/plugins/AncestorChart.py:
	Adjust available paper height when report is forced onto one page,