@@ -16,9 +16,6 @@ pkgdata_PYTHON = \
 	_GedcomUtils.py\
 	_GrampsDbWRFactories.py\
 	__init__.py\
-	_LivingProxyDb.py\
-	_PrivateProxyDb.py\
-	_ProxyDbBase.py\
 	_ReadGedcom.py\
 	_ReadXML.py\
 	_WriteGedcom.py\
