@@ -1,3 +1,6 @@
+2007-10-03  Don Allingham  <don@gramps-project.org>
+	* various: create gen package, move proxy files to this library
+
 2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/DataViews/_PedigreeView.py: correctly load bookmarks, issue 1271
 	* src/DataViews/_RelationView.py: correctly load bookmarks, issue 1271
